<resources>
    <string name="app_name">WebCam Stream</string>
    <string name="permission_camera_rationale">Camera access is required to stream video</string>
    <string name="permission_audio_rationale">Microphone access is required to stream audio</string>
    <string name="permission_denied">Permission denied. Please enable in settings.</string>
    <string name="start_streaming">Start Streaming</string>
    <string name="stop_streaming">Stop Streaming</string>
    <string name="streaming_status">Streaming Status</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="connecting">Connecting...</string>
    <string name="motion_detected">Motion Detected!</string>
    <string name="no_motion">No motion</string>
    <string name="camera_facing_back">Back Camera</string>
    <string name="camera_facing_front">Front Camera</string>
    <string name="signaling_server">Signaling Server</string>
    <string name="camera_id">Camera ID</string>
    <string name="active_cameras">Active Cameras</string>
    <string name="motion_alerts">Motion Alerts</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
</resources>